# ImageDetection

./: CMakeLists.txt  LICENSE  README.md  main.cpp
Config/: Config.xml
DBModule/include/: DBModule.hpp  ObjectProperties.hpp
DBModule/src/: DBModule.cpp  ObjectProperties.cpp
FeatureExtraction/: SurfExtractor.cpp
FeatureExtraction/include/: FeatureExtractor.hpp
FeatureExtraction/src/: FeatureExtractor.cpp
ProjectProperty/include/: Config.hpp  ConfigEntry.hpp  ProjectProperty.hpp
ProjectProperty/src/: Config.cpp  ConfigEntry.cpp
testModule/: CMakeLists.txt  testConfig.cpp  testDBModule.cpp  testFeatue.cpp
