cmake_minimum_required(VERSION 2.8 FATAL_ERROR )

project(Object_detection)

#set(CMAKE_BUILD_TYPE Release Debug)

set(CMAKE_DISABLE_SOURCE_CHANGES  ON)
set(CMAKE_DISABLE_IN_SOURCE_BUILD ON)

enable_testing()

if(" ${CMAKE_SOURCE_DIR}" STREQUAL " ${CMAKE_BINARY_DIR}")
      message(FATAL_ERROR "FATAL: In-source builds are not allowed. Create a separate directory for build files.")
endif()

if  (CMAKE_BUILD_TYPE STREQUAL Debug)
    set(BUILD_POSTFIX "_d")
else(CMAKE_BUILD_TYPE STREQUAL Release)
    set(BUILD_POSTFIX "")
endif()

if (MSVC)
    if(MSVC_VERSION LESS 1800) # 1700 = VS 2013
       message(FATAL_ERROR "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
    endif()
else()
    include(CheckCXXCompilerFlag)
    CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
    CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
    if(COMPILER_SUPPORTS_CXX11)
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
    elseif(COMPILER_SUPPORTS_CXX0X)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
    else()
       	message(FATAL_ERROR "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
     endif()
endif()

#message ("CMAKE_SOURCE_DIR : " ${CMAKE_SOURCE_DIR})
#message ("CMAKE_BINARY_DIR : " ${CMAKE_BINARY_DIR})

#SET (OpenCV_DIR "C:/opencv_3.3/build")
find_package( OpenCV REQUIRED)
if(OpenCV_FOUND)
   include_directories(${OpenCV_INCLUDE_DIRS})
   message(STATUS "Found OpenCV")
endif()

#SET (BOOST_ROOT "C:/local/boost_1_66_0")
#SET (BOOST_INCLUDEDIR "C:/local/boost_1_66_0/")
#SET (BOOST_LIBRARYDIR "C:/local/boost_1_66_0/lib64")
SET (Boost_USE_MULTITHREADED ON)
SET (Boost_USE_STATIC_LIBS ON)
if  (MSVC)
    find_package(Boost 1.62.0 REQUIRED)
    if(Boost_FOUND)
       include_directories(${Boost_INCLUDE_DIRS})
       link_directories(${BOOST_LIBRARYDIR})
       message(STATUS "Found BOOST")
    endif()
else()
    find_package(Boost 1.62.0 REQUIRED COMPONENTS system thread filesystem serialization REQUIRED )
    if(Boost_FOUND)
       include_directories(${Boost_INCLUDE_DIRS})
       link_directories(${BOOST_LIBRARYDIR})
       message(STATUS "Found BOOST")
    endif()
endif()

find_package(dlib REQUIRED)
if (dlib_FOUND)
	#    include_directories( ${dlib_INCLUDE_DIRS} )
    message(STATUS "Found DLIB ")
endif ()	

set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})

file(GLOB SOURCES ProjectProperty/src/*.cpp DBModule/src/*.cpp FeatureExtraction/src/*.cpp)

add_library(libobjdtect STATIC ${SOURCES})

#set_target_properties(libobjdtect PROPERTIES LINKER_LANGUAGE CXX)
set_target_properties(libobjdtect PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${EXECUTABLE_OUTPUT_PATH})
set_target_properties(libobjdtect PROPERTIES OUTPUT_NAME libobjdtect${BUILD_POSTFIX})
if (MSVC)
    target_link_libraries( libobjdtect ${OpenCV_LIBS})
    #target_link_libraries( libobjdtect ${Boost_iostreams_LIBRARY})
    #target_link_libraries( libobjdtect ${Boost_date_time_LIBRARY})
    #target_link_libraries( libobjdtect ${Boost_signals_LIBRARY})
    target_link_libraries( libobjdtect dlib::dlib)
else()
    target_link_libraries( libobjdtect ${OpenCV_LIBS} ${Boost_LIBRARIES})
    #target_link_libraries( libobjdtect ${Boost_LIBRARIES} )
    target_link_libraries( libobjdtect ${Boost_system_LIBRARY})
    target_link_libraries( libobjdtect ${Boost_thread_LIBRARY})
    target_link_libraries( libobjdtect ${Boost_serialization_LIBRARY})
    target_link_libraries( libobjdtect ${Boost_FILESYSTEM_LIBRARY})
    target_link_libraries( libobjdtect dlib::dlib)
endif()
add_subdirectory( testModule )
add_executable(Object_detection main.cpp)
target_link_libraries(Object_detection libobjdtect)
#set_target_properties(Object_detection PROPERTIES LINKER_LANGUAGE CXX)
set_target_properties(Object_detection PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${EXECUTABLE_OUTPUT_PATH})
set_target_properties(Object_detection PROPERTIES OUTPUT_NAME Object_detection${BUILD_POSTFIX})
